--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@vitejs/plugin-react": "^1.3.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vite": "^2.9.5",
+    "vite-tsconfig-paths": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.6",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -33,7 +35,6 @@
     "postcss": "^8.4.13",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "typescript": "^4.6.3"
   }
 }
