--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwind-scrollbar": "^1.3.1",
     "vite": "^2.9.5",
     "vite-tsconfig-paths": "^3.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
